# log4c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
demo/: CMakeLists.txt  demo.c  log4c.conf
liblog4c/: CMakeLists.txt
liblog4c/include/: log4c.h  log4c_lock.h
liblog4c/src/: CMakeLists.txt  log4c.c  log4c_lock.c  log_utils.c  log_utils.h
liblog4c/test/: CMakeLists.txt  mainTest.cpp
log4c/: CMakeLists.txt
log4c/include/: log4c.h  log4c_lock.h  log_lock.h
log4c/src/: layout_pattern.c  layout_pattern.h  log4c.c  log4c_lock.c  log4c_utils.c  log4c_utils.h  log_lock.c  log_utils.c  log_utils.h
